# repotools

./: README.md  changelicense.py  make-release-archive.sh
ci/: fetch-cmake  fetch-deps  fetch-qt
config/: CMakeLists.txt
github/: auth.py  copy-templates  dispatch  labels  wiki
licenses/: LGPL_EXCEPTION.txt  LICENSE.LGPL  LICENSE.MIT  header.AGPL3  header.AGPL3+  header.BSD  header.BSD2  header.FDL  header.GPL2  header.GPL2+  header.GPL3  header.GPL3+  header.GPL3-HAWAII  header.LGPL  header.LGPL-ONLY  header.LGPL2  header.LGPL2+  header.LGPL2.1  header.LGPL2.1+  header.LGPL213  header.LGPL3  header.LGPL3GPL2  header.LGPLKDE  header.LGPLv3+  header.MIT  header.MPL2  header.QTLGPL
translations/: Jenkinsfile  transifex-pull  transifex-push  translate-desktop
travis/: bintray.sh  docker-travis.sh  download-artifacts
